--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "deploy": "gh-pages -d build -r https://github.com/vinstagram/vinstagram.github.io -b master"
+    "deploy": "gh-pages -d src -r https://github.com/vinstagram/vinstagram.github.io -b master"
   },
   "repository": {
     "type": "git",
